[package]
name = "aria-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rocket_contrib = { version = "0.4.11", features = ["json"] }
tokio-postgres = "0.7"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
